<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WeProov</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="camera_is_required">This app require a camera</string>

    <string name="button_clear">Clear</string>
    <string name="loading_camera">Loading camera\nPlease wait.</string>

    <string name="login">Log me in</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="back">Back</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_weproov">We Proov</string>
    <string name="nav_my_documents">My documents</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about">About us</string>
    <string name="wrong_login_snack">Wrong email or password</string>
    <string name="wrong_login">Either your email or login is wrong. Please correct it</string>
    <string name="client_info">Client Info</string>
    <string name="car_info">Car Info</string>

    <string name="error_first_name">This is not a valid first name.</string>
    <string name="error_last_name">This is not a valid last name.</string>
    <string name="error_email">Please use a valid email</string>
    <string name="error_password">Please use a stronger password.</string>
    <string name="error_company">Error company</string>

    <string name="renter_first_name">First name</string>
    <string name="renter_last_name">Last name</string>
    <string name="renter_email">Email</string>
    <string name="renter_company">Company</string>
    <string name="renter_phone">Phone</string>

    <string name="client_document_info">Client documents</string>

    <string name="car_type_hybrid">Hybrid</string>
    <string name="car_type_gpl">GPL</string>
    <string name="car_type_electric">Electric</string>
    <string name="car_type_gas">Gas</string>
    <string name="car_type_diesel">Diesel</string>
    <string name="car_type">Car type: </string>
    <string name="gas_level">Gas Level:</string>
    <string name="error_car_plate_number">This is not a valid plate number</string>
    <string name="car_plate_number">Plate number</string>
    <string name="error_car_color">This is not a valid color</string>
    <string name="car_color">Car color</string>
    <string name="error_car_millage">This is not a proper millage</string>
    <string name="car_millage">Car millage</string>
    <string name="error_model">This is not a valid car model</string>
    <string name="car_model">Car model</string>
    <string name="error_brand">This is not a proper brand</string>
    <string name="car_brand">Car brand</string>

    <string name="comment_hint">Comments</string>
    <string name="title_about_us">About us</string>
    <string name="title_signature_dialog">Sign below</string>
    <string name="saving_picture">Saving picture…</string>
    <string name="error_taking_picture">An error occurred taking picture, please retry</string>
    <string name="picker_select_source">Select source</string>
    
    <string name="millage_type_kilometers">km</string>
    <string name="millage_type_miles">mi</string>
    <string name="driving_licence">Driving Licence</string>
    <string name="identity_card">ID Card</string>
    <string name="car_document_info">Car documents</string>
    <string name="vehicle_documentation">Vehicle documentation</string>
    <string name="car_additional_info">Additional info</string>
    <string name="notification_picture_download_title">Uploading WeProov</string>
    <string name="notification_picture_download_start">Establishing connection</string>
    <string name="notification_picture_download_picture">Uploading picture <xliff:g example="Left Flank" id="name">%1$s</xliff:g></string>
    <string name="notification_picture_download_end">Upload complete</string>
    <string name="welcome">Welcome <xliff:g example="Romain Caire" id="name">%1$s</xliff:g>!</string>
    <string name="explore_weproov">Explore WeProov:</string>
    <string name="signature_of">Signature of <xliff:g example="Romain Caire" id="name">%1$s</xliff:g></string>
    <string name="signature_renter">Renter</string>
    <string name="wrong_email">This email appears to be invalid</string>
    <string name="title_activity_weproov">New Weproov</string>
    <string name="notification_upload_failed">Upload failed</string>
    <string name="title_activity_fullscreen_image_display">FullscreenImageDisplayActivity</string>
    <string name="error_phone">This number doesn\'t seams to be a phone number</string>
    <string name="phone">Phone</string>
    <string name="send_comments">Send comments</string>
    <string name="sync_settings">Sync settings</string>
    <string name="sync_settings_summary">Those settings are intended to modify the behavior of the sync</string>
    <string name="title_activity_weproov_preference">WeProov Settings</string>
    <string name="pref_sync_wifi_only_summary">Turn on to enable sync only on WiFi</string>
    <string name="pref_sync_wifi_only">Sync on WiFi</string>
    <string name="feedback">Feedback</string>
    <string name="pref_sync_settings">Synchronization Settings</string>
    <string name="weproov_pictures">WeProov pictures</string>
    <string name="signatures">Signatures</string>
    <string name="confirm_weproov_message">By pressing OK, you agree that all information are correct.</string>
    <string name="confirm_weproov_title">Confirm</string>
    <string name="error_saving_signature">Oops, an error appeared while saving this signature!</string>
    <string name="navigation_weproov_subheader">WeProov</string>
    <string name="navigation_dashboard">Dashboard</string>
    <string name="navigation_account_subheader">Account</string>
    <string name="navigation_weproov_new">New report</string>
    <string name="navigation_weproov_list">My reports</string>
    <string name="navigation_account_about">About</string>
    <string name="navigation_account_logout">Logout</string>
    <string name="navigation_account_profile">My profile</string>
    <string name="record_uploader_service">Record uploader service</string>
    <string name="feedback_uploader_service">Feedback uploader service</string>
    <string name="feedback_posted_successfully">Feedback posted successfully</string>
    <string name="bug_report_content">Content</string>
    <string name="bug_report_title">Title</string>
    <string name="title_activity_my_reports">My Reports</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout ?</string>
    <string name="exit_weproov_title">Exit</string>
    <string name="exit_weproov_message">Are you sure you want to exit ?</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_document_checkout">Checkout</string>
    <string name="title_document_all">My documents</string>
    <string name="loading_document">Loading the document</string>
    <string name="search_title">Search my weproov</string>

    <string name="pdf_show_online_dialog_title">Open using Google Drive</string>
    <string name="pdf_show_online_dialog_question">We could not find any PDF apps on your phone. Do you want to use Google Drive to display this file ?</string>
    <string name="pdf_show_local_progress_title">Download</string>
    <string name="pdf_show_local_progress_content">Downloading file <xliff:g example="aaaaaaaa" id="code">%1$s</xliff:g></string>
    <string name="welcome_to_weproov_title">Welcome to WeProov!</string>
    <string name="welcome_to_weproov_text">It\'s very easy to realize WeProovs, just follow the steps and you will be done quicker than it takes to realize it!</string>
    <string name="welcome_to_weproov_subtitle">Let\'s get started!</string>
    <string name="welcome_to_weproov_checkbox">Don\'t show me this help in the future!</string>
    <string name="agree_licence">I agree the CGV and CGU</string>
    <string name="register_title">Welcome!</string>
    <string name="register_description">Fill this short profile to get started.</string>

    <string name="button_start">Start</string>
    <string name="proov_code_help">Please provide us your proov code.</string>
    <string name="proov_code">Proov code</string>
    <string name="proov_code_error_not_found">This Proov code seams wrong&#8230;</string>
    <string name="proov_code_error_already_used">This Proov code is already used&#8230;</string>
    <string name="proov_code_error_network_error">Oh! Internet is not working :( &#8230;</string>
    <string name="proov_code_error_snack">Oops, an error occurred while validating the Proov Code</string>
    <string name="proov_code_dialog_message">Please wait a bit.</string>
    <string name="proov_code_dialog_title">Checking Proov code</string>
    <string name="notification_uploading_item_number">Uploading weproov for car <xliff:g example="AA-AAA-AA" id="plate">%1$s</xliff:g></string>
    <string name="notification_uploading_photo_number">Uploading photo <xliff:g example="7" id="number">%1$d</xliff:g> (<xliff:g example="AA-AAA-AA" id="string">%2$s</xliff:g>)</string>
    <string name="notification_finishing_upload">Finished uploading for car <xliff:g example="AA-AAA-AA" id="plate">%1$s</xliff:g></string>
    <string name="document_is_not_availlable_yet">Document is not available yet!</string>
    <string name="client_signature">Client signature</string>
    <string name="renter_signature">Renter signature</string>
    <string name="clear_signature">Clear</string>

</resources>
