<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/action_bar"
            android:layout_alignParentStart="true"
            android:id="@+id/scrollView">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_centerInParent="true"
                android:id="@+id/linearLayout">

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/logo"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"/>

            <com.weproov.app.ui.views.FloatLabelLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    app:floatLabelTextAppearance="@style/TextAppearance.WeProov.FloatLabel">

                <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/edit_password"/>
            </com.weproov.app.ui.views.FloatLabelLayout>

            <com.weproov.app.ui.views.FloatLabelLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    app:floatLabelTextAppearance="@style/TextAppearance.WeProov.FloatLabel">

                <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"/>

            </com.weproov.app.ui.views.FloatLabelLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingBottom="4dp"
                    android:visibility="invisible"
                    android:textColor="@color/material_red_700"
                    android:text="@string/wrong_login"
                    android:id="@+id/edit_password_error"/>

        </LinearLayout>
    </ScrollView>

    <include
            layout="@layout/footer_button_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>